# memory-plant-rs

./: .gitignore  BENCH.md  CROSS_COMPILE.md  Cargo.toml  LICENSE  P3_FINDINGS.md  README.md
bindings/: README.md  bench_retrieval_mlx.py  embed_e5_mlx.py
bindings/kotlin/uniffi/memory_plant/: memory_plant.kt
bindings/swift/: memory_plant.swift  memory_plantFFI.h  memory_plantFFI.modulemap
examples/: bench_vsa.rs  demo.rs
python-bindings/: Cargo.toml  README.md  pyproject.toml
python-bindings/src/: lib.rs
src/: adaptive.rs  anthropic.rs  audit.rs  crypto.rs  document.rs  extractor.rs  fact.rs  ffi.rs  hlb.rs  index.rs  lib.rs  mcp_server.rs  openai.rs  persistence.rs  personal.rs  service.rs  vocab.rs  vsa.rs
src/testdata/: bench_retrieval.json  e5_mlx_vectors.json
