[package]
name = "memory-plant"
version = "0.1.0"
edition = "2021"
authors = ["Abzal Tuganbay"]
license = "Apache-2.0"
description = "Compressed associative memory layer for AI agents. HLB algebraic compression + provable algebraic forget. Rust port of the Python reference implementation."
repository = "https://github.com/sirenbyte/MemoryPlant"
keywords = ["memory", "hrr", "hlb", "vsa", "ai-agent"]
categories = ["algorithms", "data-structures"]
rust-version = "1.75"

[features]
default = []
# Pure-Rust sentence-transformer embeddings via fastembed-rs.
# Pulls in ONNX Runtime + downloads a ~30 MB model on first use.
# Without this feature, only MockEncoder is available (tests only).
fastembed = ["dep:fastembed"]
# Pure-Rust HNSW approximate-NN index (instant-distance) for large on-device
# corpora. Off by default (brute-force exact is fine to ~10k vectors).
ann = ["dep:instant-distance"]

[dependencies]
# N-dim arrays (numpy equivalent). f32 throughout — same as Python default.
ndarray = "0.16"
# FFT for HRR operator (HLB is element-wise, no FFT needed).
# rustfft is one of the fastest FFT libs in any language.
rustfft = "6.4"
# Random number generation for vocab / role tensors.
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"  # deterministic, seedable
# (de)serialization for persistence.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Lightweight error type.
thiserror = "2"
# Deterministic key→role hashing across platforms / Python parity.
sha2 = "0.10"
# At-rest encryption of persisted state (ChaCha20-Poly1305 AEAD). Pure-Rust,
# wasm-clean. Distinct from rand_chacha (the deterministic role/vocab RNG).
chacha20poly1305 = "0.10"
# Embedded ACID KV store for on-device persistence. Pure-Rust, no C deps,
# wasm-compiles. Alternative to plaintext JSON files.
redb = "2"
# Pure-Rust HNSW ANN index (optional, feature `ann`). No C/C++ deps, wasm-clean.
instant-distance = { version = "0.6", optional = true }
# UniFFI: Swift (iOS) + Kotlin (Android) bindings from the Rust core, proc-macro mode.
uniffi = { version = "0.31", features = ["cli"] }
# Regex extractor (default offline fact extraction).
regex = "1.11"
# Lightweight blocking HTTP client for LLM-extractor backends. Pure
# Rust, smaller than reqwest + tokio. ~200 KB binary impact vs ~5 MB.
ureq = { version = "3", features = ["json"], default-features = false }
# Cross-platform XDG/Home dirs lookup for default state location.
dirs = "5"
# Production sentence-transformer encoder (optional). Downloads
# AllMiniLM-L6-v2 (~30 MB) on first use into a cache dir.
fastembed = { version = "5", optional = true }
# Complex numbers for FHRR / qFHRR superposition in benchmarks.
num-complex = "0.4"
# gzip compression for chunk text storage. Pure-Rust, no system libs.
flate2 = "1"

[dev-dependencies]
# Property-based testing for HLB algebraic invariants.
proptest = "1"
# Approximate float comparison.
approx = "0.5"
# Temp dirs for persistence roundtrip tests.
tempfile = "3"

[lib]
name = "memory_plant"
path = "src/lib.rs"
# rlib for the bin + tests; cdylib for Android JNI; staticlib for iOS xcframework.
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mp-mcp-server-rs"
path = "src/bin/mp_mcp_server.rs"

[profile.release]
# Aggressive optimisation — Memory Plant hot paths are math-heavy.
opt-level = 3
lto = "fat"
codegen-units = 1
